k8s/core/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sockshop-ingress
spec:
  rules:
  - host: memory.sockshop.helidon.io
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
  - host: api.memory.sockshop.helidon.io
    http:
      paths:
        - path: /carts
          backend:
            serviceName: carts
            servicePort: 80
        - path: /catalogue
          backend:
            serviceName: catalogue
            servicePort: 80
        - path: /orders
          backend:
            serviceName: orders
            servicePort: 80
        - path: /paymentAuth
          backend:
            serviceName: payment
            servicePort: 80
        - path: /shipping
          backend:
            serviceName: shipping
            servicePort: 80
        - path: /login
          backend:
            serviceName: user
            servicePort: 80
        - path: /register
          backend:
            serviceName: user
            servicePort: 80
        - path: /customers
          backend:
            serviceName: user
            servicePort: 80
        - path: /addresses
          backend:
            serviceName: user
            servicePort: 80
        - path: /cards
          backend:
            serviceName: user
            servicePort: 80
